全体的なレスポンシブ調整とローディングアニメーション追加

--- a/開発用/src/assets/sass/component/_c-concept__lead.scss
+++ b/開発用/src/assets/sass/component/_c-concept__lead.scss
@@ -5,4 +5,7 @@
   font-family: global.$main-font;
   color: global.$text-color;
   text-align: center;
+  @include global.mq('sp') {
+    line-height: 2.33;
+  }
 }
