--- a/開発用/src/assets/sass/component/_c-content__title--vertical.scss
+++ b/開発用/src/assets/sass/component/_c-content__title--vertical.scss
@@ -3,5 +3,9 @@
 .c-content__title--vertical {
   writing-mode: vertical-rl;
   text-align: center;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-1%) translateY(-35%);
+  letter-spacing: 1em;
+  @include global.mq('sp') {
+    writing-mode: horizontal-tb;
+  }
 }
