--- a/開発用/src/assets/sass/component/_c-news__item.scss
+++ b/開発用/src/assets/sass/component/_c-news__item.scss
@@ -6,9 +6,14 @@
   border-bottom: 1px solid global.$border-bottom-color;
   transition: opacity 0.3s ease-in-out;
   display: block;
-
+@include global.mq('sp') {
+  padding-bottom: 4px;
+}
   &:not(:first-child) {
-    padding-top: 22px;
+    padding-top: 21px;
+    @include global.mq('sp') {
+      padding-top: 11px;
+    }
   }
 
   &:hover {
