--- a/開発用/src/assets/sass/component/_c-news__label.scss
+++ b/開発用/src/assets/sass/component/_c-news__label.scss
@@ -3,5 +3,8 @@
 .c-news__label {
 color: global.$label-color;
 @include global.font(16, 700, 23.17, 0.48);
-padding-left: 21px;
+padding-left: 20px;
+@include global.mq('sp') {
+  padding-left: 1px;
+}
 }
