--- a/開発用/src/assets/sass/component/_index.scss
+++ b/開発用/src/assets/sass/component/_index.scss
@@ -21,3 +21,15 @@
 @use "c-content__img--cooking";
 @use "c-content__img--guestroom";
 @use "c-content__link--cooking";
+@use "c-content__desc--cooking";
+@use "c-content__desc--guestroom";
+@use "c-content__link--guestroom";
+@use "c-mv__title";
+@use "c-footer__logo";
+@use "c-address";
+@use "c-footer__nav--item";
+@use "c-copyright";
+@use "c-address__number";
+@use "c-tel__number";
+@use "c-mv__title--footer";
+@use "c-content__title--guestroom";
