--- a/開発用/src/assets/sass/project/_p-content__text--cooking.scss
+++ b/開発用/src/assets/sass/project/_p-content__text--cooking.scss
@@ -1,7 +1,11 @@
 @use "../global/" as global;
 
-.p-content__text--cooking{
-padding-left: 0;
-width: 300px;
-padding-top: 119px;
+.p-content__text--cooking {
+  width: 340px;
+  padding-left: 96px;
+  padding-top: 119px;
+
+  @include global.mq('tab') {
+    width: 37%;
+  }
 }
