--- a/開発用/src/assets/sass/component/_c-content__img.scss
+++ b/開発用/src/assets/sass/component/_c-content__img.scss
@@ -7,10 +7,14 @@
   height: auto;
   padding-top: 37.5%;
   position: relative;
-
+transition: all 0.5s;
 @include global.mq('sp') {
   width: global.$sp-width;
   margin: 0 auto;
-  padding-top: 51%;
+  padding-top: 50.4%;
+  background: url(../img/top/top1_sp.png) center center / contain no-repeat;
+  &:hover{
+    opacity: 0.7;
+  }
 }
 }
