--- a/開発用/src/assets/sass/project/_p-content__block.scss
+++ b/開発用/src/assets/sass/project/_p-content__block.scss
@@ -5,5 +5,11 @@
 
   &:not(:first-child) {
     padding-top: 117px;
+    @include global.mq('sp') {
+      padding-top: 21px;
+    }
+  }
+  &:nth-last-child(1){
+    padding-top: 122px;
   }
 }
