--- a/開発用/src/assets/sass/project/_p-content__text--guestroom.scss
+++ b/開発用/src/assets/sass/project/_p-content__text--guestroom.scss
@@ -1,5 +1,10 @@
 @use "../global/" as global;
+
 .p-content__text--guestroom {
-padding-left: 0;
-margin: 0 auto;
+  padding-left: 0;
+  padding-top: 140px;
+
+  @include global.mq('tab') {
+    width: 58%;
+  }
 }
