--- a/開発用/src/assets/sass/project/_p-content__text.scss
+++ b/開発用/src/assets/sass/project/_p-content__text.scss
@@ -3,12 +3,13 @@
 
 .p-content__text {
   z-index: 1;
-  padding-top: 153px;
+  padding-top: 154px;
   padding-left: 33px;
-  max-width: 325px;
+  max-width: 340px;
+  width: 340px;
 
   @include global.mq('tab') {
-    width: 33%;
+    width: 45%;
   }
 
   @include global.mq('sp') {
