--- a/開発用/src/assets/sass/project/_spend.scss
+++ b/開発用/src/assets/sass/project/_spend.scss
@@ -15,6 +15,9 @@
     height: 1px;
     width: 0;
     background: #2D2D2E;
+    @include global.mq('sp'){
+        display: none;
+    }
 }
 
 
@@ -26,12 +29,25 @@
     display: flex;
     flex: 1;
     width: 900%;
+    @include global.mq('sp'){
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 85px 22px 110px 22px;
+    }
 
 }
 
 .p-spend-slide__wrapper{
     display: flex;
     margin-left: 117px;
+    @include global.mq('sp'){
+        flex-direction: column;
+        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
+        row-gap: 60px;
+    }
   
 }
 
@@ -53,6 +69,9 @@
     width: 100%;
     display: flex;
     position: relative;
+    @include global.mq('sp'){
+        justify-content: center;
+    }
     &::after{
         content: "";
         position: absolute;
@@ -63,12 +82,18 @@
         height: 20px;
         background: global.$text-color;
         border-radius: 50%;
+        @include global.mq('sp'){
+            display: none;
+        }
     }
 
 }
 
 .p-spend-slide__block1 {
     margin-right: 32px;
+    @include global.mq('sp'){
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__card {
@@ -80,17 +105,31 @@
 .p-spend-slide__card1{
     width: 408px;
     margin-right: 28px;
+    @include global.mq('sp'){
+        width: 100%;
+        margin-right: 0;
+    }
 }
 .p-spend-slide__time {
     font-size: 24px;
     line-height: calc( 29 / 24);
     letter-spacing: 2.88px;
+    @include global.mq('sp'){
+        font-size: 20px;
+        line-height: calc( 37.805 / 20 );
+        letter-spacing: 2.4px;
+    }
 }
 
 .p-spend-slide__head {
     font-size: 24px;
     line-height: calc( 29 / 24);
     letter-spacing: 2.88px;
+    @include global.mq('sp'){
+        font-size: 20px;
+        line-height: calc( 37.805 / 20 );
+        letter-spacing: 2.4px;
+    }
 }
 
 .p-spend-slide__text {
@@ -105,12 +144,18 @@
     img{
         width: 100%;
     }
+    @include global.mq('sp'){
+        margin-top: 20px;
+    }
 }
 
 .p-spend-slide__accent {
     display: flex;
     align-items: flex-start;
-}
+    @include global.mq('sp'){
+        display: none;
+    }
+}   
 
 .p-spend-slide__accent1 {
     img{
@@ -126,11 +171,18 @@
 
 .p-spend-slide__block2 {
     margin-right: 28px;
+    @include global.mq('sp'){
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__card2{
     width: 411px;
     margin-right: 27px;
+    @include global.mq('sp'){
+        width: 100%;
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__accent2 {
@@ -147,11 +199,18 @@
 
 .p-spend-slide__block3 {
     margin-right: 54px;
+    @include global.mq('sp'){
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__card3{
     width: 520px;
     margin-right: 33px;
+    @include global.mq('sp'){
+        width: 100%;
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__accent3 {
@@ -169,11 +228,18 @@
 
 .p-spend-slide__block4 {
     margin-right: 24px;
+    @include global.mq('sp'){
+        margin-right: 0;
+    }
 }   
 
 .p-spend-slide__card4{
     width: 407px;
     margin-right: 51px;
+    @include global.mq('sp'){
+        width: 100%;
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__accent4 {
@@ -184,11 +250,18 @@
 
 .p-spend-slide__block5 {
     margin-right: 51px;
+    @include global.mq('sp'){
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__card5{
     width: 486px;
     margin-right: 51px;
+    @include global.mq('sp'){
+        width: 100%;
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__accent5 {
@@ -199,11 +272,18 @@
 
 .p-spend-slide__block6 {
     margin-right: 52px;
+    @include global.mq('sp'){
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__card6{
     width: 393px;
     margin-right: 75px;
+    @include global.mq('sp'){
+        width: 100%;
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__accent6 {
@@ -214,11 +294,18 @@
 
 .p-spend-slide__block7 {
     margin-right: 75px;
+    @include global.mq('sp'){
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__card7{
     width: 361px;
     margin-right: 40px;
+    @include global.mq('sp'){
+        width: 100%;
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__accent7 {
@@ -235,11 +322,18 @@
 
 .p-spend-slide__block8 {
     margin-right: 36px;
+    @include global.mq('sp'){
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__card8{
     width: 408px;
     margin-right: 28px;
+    @include global.mq('sp'){
+        width: 100%;
+        margin-right: 0;
+    }
 }
 
 .p-spend-slide__accent8 {
@@ -260,6 +354,10 @@
 .p-spend-slide__card9{
     width: 408px;
     margin-right: 28px;
+    @include global.mq('sp'){
+        width: 100%;
+        margin-right: 0;
+    }
 }
 
 // 周辺観光
