フッター、ヘッダーの修正、温泉ページのHTML作成

--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -42,7 +42,7 @@ body li {
 .l-header__mv {
 	align-items: center;
 	display: flex;
-	height: 95.4vh;
+	height: 100.4vh;
 	justify-content: center;
 	overflow: hidden;
 	position: relative;
@@ -63,7 +63,7 @@ body li {
 	left: 50%;
 	opacity: 0;
 	position: absolute;
-	top: 33.5%;
+	top: 35.3%;
 	transform: translateX(-50%);
 }
 
@@ -75,7 +75,7 @@ body li {
 .l-footer {
 	background: url(../img/top/footer_bg.png) center center/cover no-repeat;
 	height: 500px;
-	margin-top: 764px;
+	margin-top: 767px;
 	padding-top: 104px;
 	position: relative;
 }
@@ -492,6 +492,7 @@ body li {
 	letter-spacing: 0.13em;
 	line-height: 1.4479166667;
 	position: relative;
+	top: -5px;
 }
 
 .c-footer__logo {
@@ -507,7 +508,7 @@ body li {
 	letter-spacing: 0.1207142857em;
 	line-height: 1.4478571429;
 	padding-left: 4px;
-	padding-top: 6px;
+	padding-top: 5px;
 }
 
 .c-footer__nav--item {
@@ -555,7 +556,7 @@ body li {
 	font-weight: 300;
 	letter-spacing: 0.1207142857em;
 	line-height: 1.4478571429;
-	padding-left: 3px;
+	padding-left: 4px;
 }
 
 .c-mv__title--footer {
@@ -667,6 +668,7 @@ body li {
 	top: 128px;
 	width: 74.65%;
 }
+
 .spend-wrapper {
 	overflow-x: hidden;
 }
@@ -947,33 +949,8 @@ body li {
 
 .p-gnav {
 	display: none;
-  
-@media (max-width: 767px) {
-
-.p-spend-tour {
-	padding-top: 39px;
 }
 
-.p-spend-tour__title {
-	font-size: 24px;
-	line-height: 1.4583333333;
-}
-
-.p-spend-tour__cards {
-	grid-template-columns: 1fr;
-	margin-top: 34px;
-	row-gap: 40px;
-}
-
-.spend-tour__head {
-	font-size: 20px;
-	line-height: 1.45;
-	margin-top: 15px;
-}
-
-.p-spend-tour__detail {
-	margin-top: 15px;
-=======
 .p-access {
 	padding: 120px 0;
 }
@@ -1021,6 +998,7 @@ body li {
 
 .p-access__route dd {
 	letter-spacing: 5.475px;
+}
 
 .p-content__block {
 	display: flex;
@@ -1073,21 +1051,25 @@ body li {
 	display: flex;
 	gap: 34%;
 	margin: 0 auto;
+	padding-bottom: 128px;
+	position: relative;
 	width: 75.31%;
+	z-index: 2;
 }
 
 .p-footer__link--nav {
 	display: inline-block;
+	padding-right: 2px;
 }
 
 .p-footer__link--nav:first-child {
-	margin-right: 116px;
+	margin-right: 112px;
 }
 
 .p-footer__sns--items {
-	bottom: 38px;
+	bottom: 45px;
 	display: flex;
-	gap: 40px;
+	gap: 58px;
 	margin-left: auto;
 	padding-bottom: 97px;
 	padding-right: 31%;
@@ -1095,6 +1077,68 @@ body li {
 	position: absolute;
 	right: 7px;
 	width: 130px;
+	z-index: 2;
+}
+
+.p-footer__sns--items .fa-3x {
+	font-size: 2.4em;
+}
+
+.p-dialog {
+	align-items: center;
+	background-color: rgba(96, 93, 93, 0);
+	border: none;
+	left: 50%;
+	max-height: 100%;
+	max-width: 100%;
+	padding: 0;
+	position: fixed;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 50vw; /*スクロールバー非表示（IE・Edge）*/
+	-ms-overflow-style: none; /*スクロールバー非表示（Firefox）*/
+	scrollbar-width: none;
+}
+
+.p-dialog::-webkit-scrollbar {
+	display: none;
+}
+
+.p-dialog:focus-visible {
+	outline: none;
+}
+
+dialog::backdrop {
+	background-color: rgba(96, 93, 93, 0.7);
+}
+
+.p-dialog__inner {
+	padding: 47px 0;
+	position: relative;
+}
+
+.p-dialog__close {
+	height: 40px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 40px;
+}
+
+.p-dialog__img {
+	aspect-ratio: 580/370;
+	display: block;
+	height: auto;
+	margin: 0 auto;
+	max-width: 100%;
+	text-align: center;
+	width: 509px;
+}
+
+.p-dialog__img img {
+	height: inherit;
+	-o-object-fit: cover;
+	object-fit: cover;
 }
 
 @media (min-width: 768px) and (max-width: 1280px) {
@@ -1128,7 +1172,7 @@ body li {
 }
 
 .l-header__mv {
-	height: 86.5vh;
+	height: 90.5vh;
 }
 
 #splash_logo {
@@ -1136,8 +1180,8 @@ body li {
 }
 
 .l-footer {
-	height: 61vh;
-	margin-top: 211px;
+	height: auto;
+	margin-top: 209px;
 	padding-top: 40px;
 }
 
@@ -1163,7 +1207,7 @@ body li {
 }
 
 .c-scrolldown span {
-	bottom: 12px;
+	bottom: 11px;
 	left: -2px;
 }
 
@@ -1257,6 +1301,7 @@ body li {
 
 .c-copyright {
 	padding-bottom: 28px;
+	padding-left: 2px;
 	padding-top: 31px;
 }
 
@@ -1298,7 +1343,7 @@ body li {
 
 .p-news__wrap {
 	padding-left: 0;
-	padding-top: 38px;
+	padding-top: 39px;
 	width: 89.3%;
 }
 
@@ -1309,6 +1354,31 @@ body li {
 
 .p-content__wrap {
 	padding-top: 15px;
+}
+
+.p-spend-tour {
+	padding-top: 39px;
+}
+
+.p-spend-tour__title {
+	font-size: 24px;
+	line-height: 1.4583333333;
+}
+
+.p-spend-tour__cards {
+	grid-template-columns: 1fr;
+	margin-top: 34px;
+	row-gap: 40px;
+}
+
+.spend-tour__head {
+	font-size: 20px;
+	line-height: 1.45;
+	margin-top: 15px;
+}
+
+.p-spend-tour__detail {
+	margin-top: 15px;
 }
 
 .p-content__block:not(:first-child) {
@@ -1328,23 +1398,24 @@ body li {
 .p-footer__wrap {
 	display: flex;
 	flex-direction: column-reverse;
+	padding-bottom: 0;
 }
 
 .p-footer__link--nav {
 	align-items: center;
 	display: flex;
-	gap: 21%;
+	gap: 21.5%;
 	justify-content: center;
-	padding-left: 9px;
+	padding-left: 11px;
 	white-space: nowrap;
 	width: 91%;
 }
 
 .p-footer__link--nav:nth-child(2) {
-	gap: 11%;
+	gap: 11.8%;
 	justify-content: center;
-	padding-bottom: 118px;
-	padding-left: 10%;
+	padding-bottom: 121px;
+	padding-left: 10.7%;
 	padding-top: 30px;
 	width: 84%;
 }
@@ -1355,18 +1426,19 @@ body li {
 
 .p-footer__sns--items {
 	bottom: 0;
-	gap: 34px;
-	left: 57.5%;
+	gap: 37px;
+	left: 50%;
 	margin-left: 0;
 	padding-bottom: 0;
 	padding-right: 0;
 	right: 0;
-	top: 34%;
+	top: 34.1%;
 	transform: translateX(-50%);
+	width: 74px;
 }
 
 .p-footer__sns--items .fa-3x {
-	font-size: 1.8em;
+	font-size: 1.6em;
 }
 
 }
