--- a/開発用/src/assets/sass/project/_p-footer__wrap.scss
+++ b/開発用/src/assets/sass/project/_p-footer__wrap.scss
@@ -5,13 +5,18 @@
   width: 75.31%;
   margin: 0 auto;
   gap: 34%;
+  position: relative;
+  z-index: 2;
+  padding-bottom: 128px;
 
   @include global.mq('tab') {
     gap: 20%;
+  
   }
 
   @include global.mq('sp') {
     display: flex;
     flex-direction: column-reverse;
+    padding-bottom: 0;
   }
 }
