--- a/開発用/src/assets/sass/component/_c-mv__title.scss
+++ b/開発用/src/assets/sass/component/_c-mv__title.scss
@@ -5,6 +5,7 @@
   font-family: global.$main-font;
   color: global.$white-color;
   position: relative;
+  top: -5px;
   left: 3px;
   @include global.mq('sp') {
     font-size: 24px;
