--- a/開発用/src/assets/sass/project/_p-footer__sns--items.scss
+++ b/開発用/src/assets/sass/project/_p-footer__sns--items.scss
@@ -5,24 +5,29 @@
   margin-left: auto;
   padding-top: 8px;
   display: flex;
-  gap: 40px;
+  gap: 58px;
   padding-bottom: 97px;
   padding-right: 31%;
   position: absolute;
-  bottom: 38px;
+  bottom: 45px;
   right: 7px;
+  z-index: 2;
+  .fa-3x {
+    font-size: 2.4em;
+}
   @include global.mq('sp') {
     padding-right: 0;
     padding-bottom: 0;
-    left: 57.5%;
-    top: 34%;
+    left: 50%;
+    width: 74px;
+    top: 34.1%;
     right: 0;
     bottom: 0;
     transform: translateX(-50%);
     margin-left: 0;
-    gap: 34px;
+    gap: 37px;
     .fa-3x {
-      font-size: 1.8em;
+      font-size: 1.6em;
   }
   }
 }
