--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -508,6 +508,7 @@ body li {
 	top: 128px;
 	width: 74.65%;
 }
+
 .spend-wrapper {
 	overflow-x: hidden;
 }
@@ -805,6 +806,7 @@ body li {
 .p-access__map__address {
 	letter-spacing: 1.8px;
 	margin-left: 42px;
+	white-space: nowrap;
 }
 
 .p-access__route {
@@ -814,7 +816,7 @@ body li {
 
 .p-access__route dt {
 	font-size: 20px;
-	font-weight: 500;
+	font-weight: 700;
 	letter-spacing: 7.3px;
 }
 
@@ -824,6 +826,7 @@ body li {
 
 .p-access__route dd {
 	letter-spacing: 5.475px;
+}
 
 .p-content__block {
 	display: flex;
@@ -856,6 +859,63 @@ body li {
 	width: 300px;
 }
 
+.p-dialog {
+	align-items: center;
+	background-color: rgba(96, 93, 93, 0);
+	border: none;
+	left: 50%;
+	max-height: 100%;
+	max-width: 100%;
+	padding: 0;
+	position: fixed;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 50vw; /*スクロールバー非表示（IE・Edge）*/
+	-ms-overflow-style: none; /*スクロールバー非表示（Firefox）*/
+	scrollbar-width: none;
+}
+
+.p-dialog::-webkit-scrollbar {
+	display: none;
+}
+
+.p-dialog:focus-visible {
+	outline: none;
+}
+
+dialog::backdrop {
+	background-color: rgba(96, 93, 93, 0.7);
+}
+
+.p-dialog__inner {
+	padding: 47px 0;
+	position: relative;
+}
+
+.p-dialog__close {
+	height: 40px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 40px;
+}
+
+.p-dialog__img {
+	aspect-ratio: 580/370;
+	display: block;
+	height: auto;
+	margin: 0 auto;
+	max-width: 100%;
+	text-align: center;
+	width: 509px;
+}
+
+.p-dialog__img img {
+	height: inherit;
+	-o-object-fit: cover;
+	object-fit: cover;
+}
+
 @media (min-width: 768px) and (max-width: 1280px) {
 
 .p-news__wrap {
@@ -868,7 +928,19 @@ body li {
 
 }
 
+@media (min-width: 1280px) {
+
+.is-sp {
+	display: none;
+}
+
+}
+
 @media (max-width: 767px) {
+
+.is-sp .is-pc {
+	display: none;
+}
 
 .l-inner {
 	width: 89.3%;
@@ -918,6 +990,39 @@ body li {
 
 .p-content__wrap {
 	padding-top: 15px;
+}
+
+.p-access__map {
+	align-items: flex-start;
+	flex-direction: column;
+}
+
+.p-access__map__address {
+	font-size: 14px;
+	letter-spacing: 1.68px;
+	line-height: 1.8902142857;
+	margin-left: 0;
+	text-align: left;
+}
+
+.p-access__route {
+	line-height: 1.563;
+	margin-top: 40px;
+}
+
+.p-access__route dt {
+	font-size: 18px;
+	letter-spacing: 6.57px;
+}
+
+.p-access__route dt:not(:first-of-type) {
+	margin-top: 20px;
+}
+
+.p-access__route dd {
+	font-size: 13px;
+	letter-spacing: 1.755px;
+	margin-left: 14px;
 }
 
 .p-content__text {
