--- a/開発用/src/assets/sass/foundation/_base.scss
+++ b/開発用/src/assets/sass/foundation/_base.scss
@@ -13,3 +13,15 @@ body {
     list-style: none;
   }
 }
+
+.is-sp{
+  @include global.mq('pc'){
+    display: none;
+  }
+
+.is-pc{
+  @include global.mq('sp'){
+    display: none;
+  }
+}
+}
