予約はこちらセクション作成

--- a/開発用/src/assets/sass/project/_index.scss
+++ b/開発用/src/assets/sass/project/_index.scss
@@ -7,7 +7,7 @@
 @use "p-content";
 @use "p-content__wrap";
 @use "spend";
-@use "./p-gnav";
+@use "p-gnav";
 @use "p-access";
 @use "p-content__block";
 @use "p-content__text";
@@ -20,5 +20,6 @@
 @use "p-footer__wrap";
 @use "p-footer__link--nav";
 @use "p-footer__sns--items";
-@use "./p-dialog";
+@use "p-dialog";
+@use "p-reservation"
 
