--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -29,7 +29,7 @@ body li {
 }
 
 #guest-room .l-lower-header {
-	background: url(../../../../public/assets/img/guest-room/header.jpg) no-repeat;
+	background: url(../../assets/img/guest-room/header.jpg) no-repeat;
 	background-size: contain;
 }
 
@@ -188,6 +188,7 @@ body li {
 	height: 1px;
 	margin: 0 auto;
 	position: relative;
+	transition: all 0.3s;
 	width: 33.45px;
 }
 
@@ -198,29 +199,31 @@ body li {
 	height: inherit;
 	left: 0;
 	position: absolute;
-	top: -1em;
+	top: -14.5px;
+	transition: all 0.3s;
 	width: inherit;
 }
 
 .c-drawer-btn__bar::after {
-	top: 1em;
+	top: 14.5px;
 }
 
 .js-active {
-	transition: all 0.3s;
-}
-
-.js-active .c-drawer-open {
 	background-color: transparent;
-	opacity: 1;
 }
 
-.js-active .c-drawer-open::before {
-	transform: rotate(45deg);
+.js-active .c-drawer-btn__bar {
+	background-color: transparent;
 }
 
-.js-active .c-drawer-open::before {
-	transform: rotate(-45deg);
+.js-active .c-drawer-btn__bar::before {
+	background-color: #fff;
+	transform: translateY(14.5px) rotate(45deg);
+}
+
+.js-active .c-drawer-btn__bar::after {
+	background-color: #fff;
+	transform: translateY(-14.5px) rotate(-45deg);
 }
 
 .c-main-message {
@@ -972,24 +975,23 @@ body li {
 	display: flex;
 	font-family: "Zen Kaku Gothic New", sans-serif;
 	height: 723px;
-	opacity: 1;
+	opacity: 0;
 	padding: 109px 251px 154px 86px;
 	pointer-events: none;
 	position: absolute;
 	right: 0;
 	top: 0;
 	width: 859px;
-	z-index: 10;
+	z-index: -1;
 }
 
 .js-panelactive {
-	align-items: center;
-	display: grid;
+	justify-content: space-between;
 	opacity: 1;
 	pointer-events: visible;
 	position: fixed;
 	transition: all 0.3s;
-	z-index: 99;
+	z-index: 10;
 }
 
 .p-gnav__logo-img {
@@ -1258,6 +1260,32 @@ dialog::backdrop {
 
 @media (min-width: 768px) and (max-width: 1280px) {
 
+.c-drawer-btn {
+	height: 51px;
+	width: 66px;
+}
+
+.c-drawer-btn__bar {
+	width: 20px;
+}
+
+.c-drawer-btn__bar::before,
+.c-drawer-btn__bar::after {
+	top: -8.8px;
+}
+
+.c-drawer-btn__bar::after {
+	top: 8.8px;
+}
+
+.js-active .c-drawer-btn__bar::before {
+	transform: translateY(8.8px) rotate(45deg);
+}
+
+.js-active .c-drawer-btn__bar::after {
+	transform: translateY(-8.8px) rotate(-45deg);
+}
+
 .p-news__wrap {
 	width: 639px;
 }
@@ -1298,6 +1326,21 @@ dialog::backdrop {
 
 .is-sp .is-pc {
 	display: none;
+}
+
+.l-lower-header {
+	aspect-ratio: 375/500;
+	height: 500px;
+}
+
+#guest-room .l-lower-header {
+	background-image: url(../../assets/img/guest-room/header_sp.jpg);
+	background-size: cover;
+}
+
+#guest-room .l-lower-header img {
+	-o-object-fit: cover;
+	object-fit: cover;
 }
 
 .l-inner {
@@ -1352,6 +1395,32 @@ dialog::backdrop {
 
 .c-search-btn__link {
 	font-size: 14px;
+}
+
+.c-drawer-btn {
+	height: 51px;
+	width: 66px;
+}
+
+.c-drawer-btn__bar {
+	width: 20px;
+}
+
+.c-drawer-btn__bar::before,
+.c-drawer-btn__bar::after {
+	top: -8.8px;
+}
+
+.c-drawer-btn__bar::after {
+	top: 8.8px;
+}
+
+.js-active .c-drawer-btn__bar::before {
+	transform: translateY(8.8px) rotate(45deg);
+}
+
+.js-active .c-drawer-btn__bar::after {
+	transform: translateY(-8.8px) rotate(-45deg);
 }
 
 .c-concept__lead {
