--- a/開発用/src/assets/sass/layout/_l-lower-header.scss
+++ b/開発用/src/assets/sass/layout/_l-lower-header.scss
@@ -7,17 +7,31 @@
     display: grid;
     align-items: center;
     position: relative;
+
+    @include global.mq(sp) {
+        height: 500px;
+        aspect-ratio: 375 / 500;
+    }
 }
 .l-lower-header__title {
     color: global.$white-color;
     // @include font(48, 400, 69.5, 6.24);
     font-size: calc(48 / 16 * 1rem);
     line-height: calc(69.5 / 48);
-    letter-spacing: calc(6.24/ 48 * 1em);
+    letter-spacing: calc(6.24 / 48 * 1em);
     text-align: center;
 }
 
 #guest-room .l-lower-header {
-    background: url(../../../../public/assets/img/guest-room/header.jpg) no-repeat;
+    background: url(../../assets/img/guest-room/header.jpg) no-repeat;
     background-size: contain;
+
+    @include global.mq(sp) {
+        background-image: url(../../assets/img/guest-room/header_sp.jpg);
+        background-size: cover;
+        // background-position: center center;
+        img {
+            object-fit: cover;
+        }
+    }
 }
