--- a/開発用/src/assets/sass/component/_index.scss
+++ b/開発用/src/assets/sass/component/_index.scss
@@ -33,3 +33,19 @@
 @use "c-tel__number";
 @use "c-mv__title--footer";
 @use "c-content__title--guestroom";
+@use "c-header__heading";
+@use "c-onsen__block-title";
+@use "c-onsen__block-desc";
+@use "c-onsen__block-time";
+@use "c-onsen__block-maintenance";
+@use "c-onsen__properties-title";
+@use "c-onsen__desc";
+@use "c-price__content--title";
+@use "c-operating__hours";
+@use "c-operating__time";
+@use "c-price__label";
+@use "c-price__weekday-label";
+@use "c-price__weekday-details";
+@use "c-price__holiday-label";
+@use "c-price__holiday-details";
+@use "c-price__note";
